方法区内存溢出 1、Java8不支持 -XX:PermSize和-XX:MaxPermSize参数了，方法区在Java8中被放到元空间去了 2、方法区内存溢出会报错java.lang.OutOfMemoryError:Perm space